--- a/calculator/style.css
+++ b/calculator/style.css
@@ -5,8 +5,15 @@ body{
     --shadow: #252a46;
     background-color: var(--dark1);
     display: flex;
-    overflow: hidden;
+    overflow-x: hidden;
 }
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: var(--dark2); 
+    border-radius: 20px;
+  }
 
 /******************* sidebar *******************/
 body #sidebar{
@@ -104,7 +111,7 @@ body form button{
     border-radius: 20px;
     box-shadow: 5px 5px var(--shadow);
     min-height: 100px;
-    max-height: 300px;
+    max-height: 200px;
     overflow-x: auto;
 }
 body #historique header{
